; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_tty3270.c_tty3270_read_callback.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_tty3270.c_tty3270_read_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raw3270_request = type { i64 }
%struct.tty3270 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.raw3270_request*, i8*)* @tty3270_read_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tty3270_read_callback(%struct.raw3270_request* %0, i8* %1) #0 {
  %3 = alloca %struct.raw3270_request*, align 8
  %4 = alloca i8*, align 8
  store %struct.raw3270_request* %0, %struct.raw3270_request** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.raw3270_request*, %struct.raw3270_request** %3, align 8
  %6 = getelementptr inbounds %struct.raw3270_request, %struct.raw3270_request* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = call i32 @raw3270_get_view(i64 %7)
  %9 = load %struct.raw3270_request*, %struct.raw3270_request** %3, align 8
  %10 = getelementptr inbounds %struct.raw3270_request, %struct.raw3270_request* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.tty3270*
  %13 = getelementptr inbounds %struct.tty3270, %struct.tty3270* %12, i32 0, i32 0
  %14 = call i32 @tasklet_schedule(i32* %13)
  ret void
}

declare dso_local i32 @raw3270_get_view(i64) #1

declare dso_local i32 @tasklet_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
